[gd_scene load_steps=3 format=3 uid="uid://bntp0ad2trpw"]

[ext_resource type="Script" uid="uid://lipyykttg3yg" path="res://steam.gd" id="1_f3sb7"]
[ext_resource type="Script" uid="uid://tvwk5eoh6dbj" path="res://world.gd" id="1_fj7yv"]

[node name="World" type="Node2D"]
script = ExtResource("1_fj7yv")

[node name="Steam" type="Node" parent="."]
script = ExtResource("1_f3sb7")

[node name="Host" type="Button" parent="."]
offset_right = 157.0
offset_bottom = 79.0
text = "Host"

[node name="Refresh" type="Button" parent="."]
offset_top = 79.0
offset_right = 157.0
offset_bottom = 158.0
text = "Refresh
"

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
spawn_path = NodePath("..")

[node name="Lobby container" type="ScrollContainer" parent="."]
offset_left = 158.0
offset_top = 5.0
offset_right = 607.0
offset_bottom = 332.0

[node name="Lobbies" type="VBoxContainer" parent="Lobby container"]
layout_mode = 2

[node name="TextEdit" type="TextEdit" parent="."]
offset_top = 184.0
offset_right = 161.0
offset_bottom = 228.0
placeholder_text = "Enter Lobby ID"

[node name="Join Lobby" type="Button" parent="."]
offset_left = 1.0
offset_top = 233.0
offset_right = 158.0
offset_bottom = 312.0
text = "Join with ID"

[connection signal="pressed" from="Host" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Refresh" to="." method="_on_refresh_pressed"]
[connection signal="pressed" from="Join Lobby" to="." method="_on_join_lobby_pressed"]
